# PID-ZephyrRTOS

./: ADAPTACION_PRACTICA_SOTR.md  GUIA_INICIO.md  PROPUESTA_PRACTICA.md  README.md
Ejemplos/HAL_ADC/: Kconfig
Ejemplos/HAL_Light_&_Internal_Temp(ADC)/: CMakeLists.txt  prj.conf
Ejemplos/HAL_Temp&Humi-DHT11/: CMakeLists.txt  Kconfig  prj.conf
Ejemplos/Sharp/: CMakeLists.txt  prj.conf
Ejemplos/Sharp/src/: demo_sharp.c
Ejemplos/Stepper/: prj.conf
Practica/: CMakeLists.txt  prj.conf
Practica-Monitorizacion/: CMakeLists.txt  prj.conf
Practica-Monitorizacion/include/: HAL_ADC.h  internal_temp.h  leds.h  light_sensor.h  main.h  mqtt_publisher.h  supervisor.h
Practica-Monitorizacion/src/: HAL_ADC.c  internal_temp.c  leds.c  light_sensor.c  main.c  mqtt_publisher.c  supervisor.c
Practica-SOTR_Ball_Balance_Project/: Kconfig  prj.conf
Practica-SOTR_Ball_Balance_Project/include/: HAL_ADC.h  controller.h  gui.h  screen.h  stepper_motor.h
Practica-SOTR_Ball_Balance_Project/src/: controller.c  demo_sharp.c  demo_stepper.c  gui.c  lcd_driver.c  pract10_ball_balance.c  screen.c  stepper_motor.c
Practica/include/: internal_temp.h  leds.h  light_sensor.h  main.h  mqtt_publisher.h  supervisor.h  timespec_operations.h
Practica/src/: MQTT_publisher.c  MQTT_publisher.h  internal_temp.c  internal_temp.h  leds.c  leds.h  light_sensor.c  light_sensor.h  main.c  main.h  mqtt_publisher.c  supervisor.c  supervisor.h
ThingsBoard/: stm32f769_dashboard.json
ThingsBoard/Docker/: docker-compose.yml
ThingsBoard/Plantillas/: stm32f769_dashboard.json  stm32f769_profile.json
(+11 files in other folders)
